<resources>
    <string name="app_name">Drink Some More</string>

    <string name="littleGlass">26 cl</string>
    <string name="regularGlass">33 cl</string>
    <string name="littleBottle">50 cl</string>
    <string name="normalBottle">1 L</string>
    <string name="ok">OK</string>
    <string name="labelDrank">Today you drank 0 L!</string>
    <string name="labelDrank_Start">Today you drank</string>
    <string name="labelDrank_End"> L !</string>
</resources>
