<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#ffffff" tools:context=".HomeActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/littleGlass"
                android:id="@+id/button26"
                android:layout_marginBottom="163dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regularGlass"
                android:id="@+id/button33"
                android:layout_alignTop="@+id/button26"
                android:layout_toEndOf="@+id/button26" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/littleBottle"
                android:id="@+id/button50"
                android:layout_alignTop="@+id/button33"
                android:layout_toStartOf="@+id/button100" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normalBottle"
                android:id="@+id/button100"
                android:layout_alignTop="@+id/button50"
                android:layout_alignParentEnd="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_alignWithParentIfMissing="false"
                android:layout_marginTop="42dp"
                android:layout_below="@+id/button33"
                android:layout_toStartOf="@+id/buttonValidateTextField" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:id="@+id/buttonValidateTextField"
                android:layout_alignBottom="@+id/editText"
                android:layout_toEndOf="@+id/button50" />
        </RelativeLayout>

        <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay" android:orientation="horizontal"
            tools:ignore="UselessParent">

        </LinearLayout>

    </FrameLayout>

</FrameLayout>
